--- a/src/chrome/locale/ja/mboximport/mboximport.dtd
+++ b/src/chrome/locale/ja/mboximport/mboximport.dtd
@@ -1,49 +1,49 @@
-<!ENTITY exportWithSub "サブフォルダと共にフォルダをエクスポート (簡易)">
+<!ENTITY exportWithSub "サブフォルダーと共にフォルダーをエクスポート (簡易)">
 <!ENTITY importMbox "mbox ファイルをインポート">
-<!ENTITY labelmenuMI "インポート・エクスポート NG">
-<!ENTITY MBlabel1 "出力先フォルダにある同じ名前の mbox ファイルを上書き">
-<!ENTITY importDir "インポートする mbox ファイルを検索してフォルダを選択">
+<!ENTITY labelmenuMI "ImportExportTools NG">
+<!ENTITY MBlabel1 "出力先フォルダーにある同じ名前の mbox ファイルを上書き">
+<!ENTITY importDir "インポートする mbox ファイルを検索してフォルダーを選択">
 <!ENTITY labelmenuMItools "ImportExportTools NG">
 <!ENTITY importFile "単一または複数の mbox ファイルを直接インポート">
 <!ENTITY importDialogLabel "インポート方法の選択:">
 <!ENTITY importDialogTitle "インポート mbox ファイル">
-<!ENTITY importStruct "サブフォルダを含む単一または複数の mbox ファイルをインポート">
-<!ENTITY exportStruct "サブフォルダを含むフォルダをエクスポート (フォルダ構成を含む)">
-<!ENTITY exportAllStruct "すべてのフォルダをエクスポート (フォルダ構成を含む)">
+<!ENTITY importStruct "サブフォルダーを含む単一または複数の mbox ファイルをインポート">
+<!ENTITY exportStruct "サブフォルダーを含むフォルダーをエクスポート (フォルダー構成を含む)">
+<!ENTITY exportAllStruct "すべてのフォルダーをエクスポート (フォルダー構成を含む)">
 <!ENTITY MBlabel2 "単一ファイルのエクスポートに英数字のみを使用">
-<!ENTITY allMsgsFolder "フォルダ内のすべてのメッセージをエクスポート">
-<!ENTITY asEML "eml 形式">
+<!ENTITY allMsgsFolder "フォルダー内のすべてのメッセージをエクスポート">
+<!ENTITY asEML "EML 形式">
 <!ENTITY asHTML "HTML 形式">
 <!ENTITY asTXT "プレーンテキスト形式">
 <!ENTITY saveSelected "選択済みメッセージを保存">
 <!ENTITY justIndex "インデックスのみ">
 <!ENTITY toClip "メッセージをクリップボードにコピー">
-<!ENTITY MBlabel3 "フォルダから mbox ファイルをインポートする前に確認">
+<!ENTITY MBlabel3 "フォルダーから mbox ファイルをインポートする前に確認">
 <!ENTITY MBlabel4 "メッセージペインに表示されたとおりの HTML 形式">
 <!ENTITY MBlabel5 "テキスト形式でクリップボードにコピー (互換性の問題があります)">
-<!ENTITY MBlabel6 "存在する場合は、エクスポートするファイルの先頭に日付を追加">
+<!ENTITY MBlabel6 "存在する場合はエクスポートするファイルの先頭に日付を追加">
 <!ENTITY MBlabel7a "件名の最大長:">
 <!ENTITY MBlabel7b "文字">
 <!ENTITY MBlabel7c "送信者名の最大長:">
 <!ENTITY MBlabel7d "宛先名の最大長:">
 <!ENTITY oneFile "単一ファイル">
-<!ENTITY importAttachedEML "このフォルダにあるメッセージをインポート">
+<!ENTITY importAttachedEML "このフォルダーにあるメッセージをインポート">
 <!ENTITY iHTML "(HTML)">
 <!ENTITY iCSV "(CSV)">
 <!ENTITY toClipMenu "クリップボードにコピー">
 <!ENTITY copyClipMessage "メッセージ">
-<!ENTITY copyClipHeaders "ヘッダ">
+<!ENTITY copyClipHeaders "ヘッダー">
 <!ENTITY taskMenuAccesskey "x">
 <!ENTITY clipMenuAccesskey "o">
-<!ENTITY importDirRec "インポートする mbox ファイルを検索するフォルダを選択 (サブフォルダを含む)">
-<!ENTITY importDirProf "プロファイルフォルダ内でファイル選択">
+<!ENTITY importDirRec "インポートする mbox ファイルを検索するフォルダーを選択 (サブフォルダーを含む)">
+<!ENTITY importDirProf "プロファイルフォルダー内でファイル選択">
 <!ENTITY MBlabel8 "「選択済みメッセージを保存」でファイル名に日付を追加">
 <!ENTITY options "設定">
-<!ENTITY importALLEML1 "フォルダのみ">
-<!ENTITY importALLEML2 "サブフォルダも含む">
+<!ENTITY importALLEML1 "フォルダーのみ">
+<!ENTITY importALLEML2 "サブフォルダーも含む">
 <!ENTITY misc "全般">
 <!ENTITY filenameFormat "ファイル名">
-<!ENTITY savedirs "エクスポートフォルダ">
+<!ENTITY savedirs "エクスポートフォルダー">
 <!ENTITY addTimestamp "ファイルのプロパティに追加">
 <!ENTITY customizeFilename "以下の形式を使用：">
 <!ENTITY captionCustomize "ファイル名のカスタマイズ">
@@ -52,8 +52,8 @@
 <!ENTITY date "日付">
 <!ENTITY key "インデックス">
 <!ENTITY addtime.label "データ日付に時間を追加">
-<!ENTITY mboxExport "フォルダを mbox ファイルでエクスポート：">
-<!ENTITY emlExport "フォルダを 単一ファイルでエクスポート：">
+<!ENTITY mboxExport "フォルダーを mbox ファイルでエクスポート：">
+<!ENTITY emlExport "フォルダーを単一ファイルでエクスポート：">
 <!ENTITY selExport "選択メッセージをエクスポート：">
 <!ENTITY MBcaptionlabel1 "設定">
 <!ENTITY saveProfileMail "すべてのメールファイルを保存">
@@ -62,7 +62,7 @@
 <!ENTITY sdAll "すべて">
 <!ENTITY sdSelected "選択されたもの">
 <!ENTITY sdFormat "形式">
-<!ENTITY sdEML "eml">
+<!ENTITY sdEML "EML">
 <!ENTITY sdHTML "HTML">
 <!ENTITY sdText "プレーンテキスト">
 <!ENTITY searchAndExport "検索してエクスポート">
@@ -71,39 +71,39 @@
 <!ENTITY fileLenCaption "ファイル名の長さ">
 <!ENTITY cutSub "件名を 50 文字でカット">
 <!ENTITY cutFN "ファイルパスを 256 文字でカット">
-<!ENTITY sdMBOX "mbox (新規)">
-<!ENTITY sdMBOX2 "mbox (追加)">
-<!ENTITY asMBOX "mbox ファイルとして (新規)">
-<!ENTITY asMBOX2 "mbox ファイルとして (追加)">
+<!ENTITY sdMBOX "Mbox (新規)">
+<!ENTITY sdMBOX2 "Mbox (追加)">
+<!ENTITY asMBOX "Mbox ファイルとして (新規)">
+<!ENTITY asMBOX2 "Mbox ファイルとして (追加)">
 <!ENTITY filenameCharset "ファイル名用の文字コード: ">
 <!ENTITY name "名前">
-<!ENTITY importStructDescr1 "まさしく同じ名前の mbox フォルダを選択してください.。">
-<!ENTITY importStructDescr2 "また、サブフォルダの拡張子「sbd」があれば自動的にインポートされます。">
+<!ENTITY importStructDescr1 "まさしく同じ名前の mbox フォルダーを選択してください.。">
+<!ENTITY importStructDescr2 "またサブフォルダーの拡張子「sbd」があれば自動的にインポートされます。">
 <!ENTITY abortExport "現在のエクスポートを中止">
 <!ENTITY allMsg "すべてのメッセージをエクスポート">
-<!ENTITY indexSettingLabel "メールフォルダのすべてのメッセージをエクスポートするとき:">
-<!ENTITY indexOn "メッセージの新しいフォルダおよびインデックスを作成 ">
-<!ENTITY indexOff "選択したインデックスなしのフォルダを使用">
-<!ENTITY copyFolderPath "ディスク上のフォルダパスをコピー">
+<!ENTITY indexSettingLabel "メールフォルダーのすべてのメッセージをエクスポートするとき:">
+<!ENTITY indexOn "メッセージの新しいフォルダーおよびインデックスを作成 ">
+<!ENTITY indexOff "選択したインデックスなしのフォルダーを使用">
+<!ENTITY copyFolderPath "ディスク上のフォルダーパスをコピー">
 <!ENTITY importSMS "SMS をインポート">
-<!-- \'SMS Backup and Restore\' is the name of an Android application and so maybe it\'s better not to translate it -->
+<!-- “SMS Backup and Restore” is the name of an Android application and so maybe it’s better not to translate it -->
 <!ENTITY android "Android 用の 'SMS バックアップとリストア'">
 <!ENTITY sender "差出人">
 <!ENTITY recipient "受取人">
-<!ENTITY exportRemoteFolder "リモートフォルダのエクスポート">
+<!ENTITY exportRemoteFolder "リモートフォルダーのエクスポート">
 <!ENTITY skipMsgLabel "送受信中（作成中）のファイルがあるときは保存しない">
 <!ENTITY asCSV "スプレッドシート (CSV)">
-<!ENTITY exportZIP "フォルダをエクスポート（zip 圧縮形式）">
-<!ENTITY openFolderPath "ファイルのあるフォルダを開く">
-<!ENTITY addNumber.label "mbox ファイルをインポートするときは、常にランダムな番号を名前に追加">
+<!ENTITY exportZIP "フォルダーをエクスポート（zip 圧縮形式）">
+<!ENTITY openFolderPath "ファイルのあるフォルダーを開く">
+<!ENTITY addNumber.label "mbox ファイルをインポートするときは常にランダムな番号を名前に追加">
 <!ENTITY textCharset "テキストおよび CSV 形式でエクスポートするときの文字コード：">
 <!ENTITY importEML "eml ファイルをインポート">
-<!ENTITY importALLEML "フォルダからすべての eml ファイルをインポート">
-<!ENTITY importMAILDIR "Maildir フォルダからインポート">
+<!ENTITY importALLEML "フォルダーからすべての eml ファイルをインポート">
+<!ENTITY importMAILDIR "Maildir フォルダーからインポート">
 <!ENTITY withattach "(添付ファイル含む)">
 <!ENTITY asPDF "PDF 形式">
 <!ENTITY importProfile "プロファイルのインポート">
-<!ENTITY csvSep "CSV 形式でエクスポート時のセパレータ:">
+<!ENTITY csvSep "エクスポート用 CSV 区切り：">
 <!ENTITY saveProfile "プロファイルのエクスポート (保存)">
 <!ENTITY withIndexLabel "HTML インデックス付き">
 
@@ -112,8 +112,9 @@
 <!ENTITY dateCustomOpt "日付（カスタム）">
 <!ENTITY useExtFilenameFormat "拡張フォーマットを使用する">
 <!ENTITY addSuffix "接尾辞を追加">
+
 <!ENTITY dateFormatRefTooltipText "日付形式リファレンス">
 <!ENTITY extFilenameFormatRefTooltipText "拡張ファイル名形式リファレンス">
+<!ENTITY noFolderSelectedMenuTop "[選択したフォルダーがありません（インポート\エクスポートが無効）]">
 <!ENTITY backupOnExit "終了時のバックアップ">
-<!ENTITY noFolderSelectedMenuTop "[選択したフォルダがありません（インポート\エクスポートが無効）]">
 <!ENTITY indexCSVdateFormat "インデックス、CSV日付形式：">
