--- a/src/chrome/locale/ja/mboximport/mboximport.properties
+++ b/src/chrome/locale/ja/mboximport/mboximport.properties
@@ -1,67 +1,68 @@
 nomboxfile=mbox 形式のファイルではないか\n破損した mbox ファイルのようです
-folderexists=インポート不可: 同じ名前のフォルダが存在します
+folderexists=インポート不可: 同じ名前のフォルダーが存在します
 fileexists=エクスポート不可: 同じ名前のファイルが存在します
-nowritable=エクスポート不可: フォルダへの書き込み権限がありません
+nowritable=エクスポート不可: フォルダーへの書き込み権限がありません
 exportOK=エクスポートは正常に完了しました
-isNewsgroup=未対応: IMAP または NEWS のアカウントは\nオフライン利用に設定されているフォルダのみエクスポート可能です
-nofolder=目的のフォルダが選択されていません
-badfolder=このフォルダにインポートはできません (IMAP またはニュースグループ形式のため)
-exportAccount=すべてのフォルダをエクスポート
-exportFolder=フォルダをエクスポート
+isNewsgroup=未対応: IMAP または NEWS のアカウントは\nオフライン利用に設定されているフォルダーのみエクスポート可能です
+nofolder=目的のフォルダーが選択されていません
+badfolder=このフォルダーにインポートはできません (IMAP またはニュースグループ形式のため)
+exportAccount=すべてのフォルダーをエクスポート
+exportFolder=フォルダーをエクスポート
 filePickerImport=インポートする mbox ファイルを選択
-filePickerExport=目的のフォルダを選択
-extensions.ImportExportToolsNG@cleidigh.description=メッセージやフォルダのインポート・エクスポート機能を追加します (NextGen)
-virtualfolder=これは仮想フォルダであり、メッセージをエクスポートするためには\n通常のフォルダにコピーしてエクスポートする必要があります
-searchdir=ファイル検索するフォルダを選択する
+filePickerExport=目的のフォルダーを選択
+extensions.ImportExportToolsNG@cleidigh.description=メッセージやフォルダーのインポート・エクスポート機能を追加します (NextGen)
+virtualfolder=これは仮想フォルダーであり、メッセージをエクスポートするためには\n通常のフォルダーにコピーしてエクスポートする必要があります
+searchdir=ファイル検索するフォルダーを選択する
 confirmimport=ファイルをインポートしますか
-endscan=フォルダスキャンの最後
+endscan=フォルダースキャンの最後
 internalerror=不明なエラーのためインポートできません
 exportstart=エクスポート中...お待ちください
 exported=エクスポートしました
 msgs=メッセージ:
 nosubjectmsg=件名なし
 messsubdir=メッセージ
-badfolder2=このフォルダにはインポートできません (IMAP 、ニュースグループまたは仮想フォルダ形式のため)
+badfolder2=このフォルダーにはインポートできません (IMAP 、ニュースグループまたは仮想フォルダー形式のため)
 temp_error=インポート不可: 一時ファイル作成でエラーが発生しました
 importEMLstart=インポート中...お待ちください
-numEML=インポート eml ファイル:
+numEML=インポート eml ファイル：
 CSVseparator=,
-noEML=このフォルダには eml ファイルがありませんでした
+noEML=このフォルダーには eml ファイルがありませんでした
 backupWarning=この操作中はプログラムが\n応答しなくなる可能性があります。\nこのまま続行しますか？
 noWaring=次回からこの警告を表示しない
 emailFiles=メールファイル
 filePickerImportMSG=選択したメッセージをインポート
 filePickerAppend=選択した mbox ファイル
-virtFolAlert=仮想フォルダはこの形式で別々にエクスポートすることができます
+virtFolAlert=仮想フォルダーはこの形式で別々にエクスポートすることができます
 exportAborted=エクスポートを中止しました
-# SMS Backup and Restore' is the name of an Android application and so maybe it's better not to translate it\n
+# “SMS Backup and Restore” is the name of an Android application and so maybe it’s better not to translate it\n
 importSMSandroid=SMS のインポート (Android 用の SMS のバックアップとリストア)
-noFolderExport=エクスポートすることができません。\n選択されたフォルダは異なるタイプか、あるいは仮想フォルダがあります。
-remoteWarning=ローカルにある IMAP または NEWS のコピーをエクスポートしています。\nローカルフォルダはリモートフォルダ内のすべてのメッセージまで含むことができません。\nこのまま続行しますか？ 
-offlineWarning=このフォルダはオフラインです。\nローカルに保存されているメッセージのみエクスポートされます。このまま続行しますか？
-noRemoteExport=オンライン状態ではないので、このリモートフォルダをエクスポートすることができません。
-noMboxStorage=別形式を使用しているアカウントの「Mbox」フォルダのインポートはできません。
-noMaildirStorage=別形式を使用しているアカウントの「Maildir」フォルダのインポートはできません。
-isEudora=この「mbox」ファイルは、Eudora のものと思われます。\nThunderbird ではそのままでは扱うことができませんので、標準の「mbox」形式に変換してください。
-isNotMaildir=インポートフォルダは「Maildir」フォルダではありません。
-needTB3=この機能は、Thunderbird 3 以上のバージョンを使用しなければ利用できません。
-formatWarning=このエクスポートでは、添付ファイルは保存されません。\n添付ファイルも保存したい場合は、他の形式を使用してください。\n  注：但し（添付ファイル含む）は、別フォルダに保存します。\nこのまま続行しますか？
-formatWarningImport=この形式を使用した場合は、エクスポートしたメッセージのインポートは可能にはなりません。\nこのまま続行しますか？
-noPDFmultipleFolders=PDF 形式でエクスポートする場合は、1 つのフォルダのみを選択してください。
-isNotStandard=この「mbox」ファイルは、Thunderbird のフォルダ形式と異なる形式を使用します。また、Thunderbird が、適切に扱えない可能性があります。\nこのまま続行しますか？
+noFolderExport=エクスポートすることができません。\n選択されたフォルダーは異なるタイプか、あるいは仮想フォルダーがあります。
+remoteWarning=ローカルにある IMAP または NEWS のコピーをエクスポートしています。\nローカルフォルダーはリモートフォルダー内のすべてのメッセージまで含むことができません。\nこのまま続行しますか？ 
+offlineWarning=このフォルダーはオフラインです。\nローカルに保存されているメッセージのみエクスポートされます。このまま続行しますか？
+noRemoteExport=オンライン状態ではないのでこのリモートフォルダーをエクスポートすることができません。
+noMboxStorage=別形式を使用しているアカウントの「Mbox」フォルダーのインポートはできません。
+noMaildirStorage=別形式を使用しているアカウントの「Maildir」フォルダーのインポートはできません。
+isEudora=この「Mbox」ファイルはEudora のものと思われます。\nThunderbird ではそのままでは扱うことができませんので標準の「Mbox」形式に変換してください。
+isNotMaildir=インポートフォルダーは「Maildir」フォルダーではありません。
+needTB3=この機能はThunderbird 3 以上のバージョンを使用しなければ利用できません。
+formatWarning=このエクスポートでは添付ファイルは保存されません。\n添付ファイルも保存したい場合は他の形式を使用してください。\n  注：但し（添付ファイル含む）は別フォルダーに保存します。\nこのまま続行しますか？
+formatWarningImport=この形式を使用した場合はエクスポートしたメッセージのインポートは可能にはなりません。\nこのまま続行しますか？
+noPDFmultipleFolders=PDF 形式でエクスポートする場合は 1 つのフォルダーのみを選択してください。
+isNotStandard=この「Mbox」ファイルはThunderbird のフォルダー形式と異なる形式を使用します。また Thunderbird が適切に扱えない可能性があります。\nこのまま続行しますか？
 noPDFmac=この機能は Thunderbird のバグのため、このプラットフォームでは利用できません。
-noPDFnoPrinter=この PC にインストールされているプリンターがありません。この機能には、少なくともインストールされている 1 台のプリンター (または仮想 1 台) が必要です。
+noPDFnoPrinter=この PC にインストールされているプリンターがありません。この機能には少なくともインストールされている 1 台のプリンター (または仮想 1 台) が必要です。
 
 subjectFmtToken=${タイトル}
 senderFmtToken=${送信者}
 recipientFmtToken=${受信者}
-senderEmailFmtToken=${送信者_email}
-recipientEmailFmtToken=${受信者_email}
+senderEmailFmtToken=${送信者のメールアドレス}
+recipientEmailFmtToken=${受信者のメールアドレス}
 smartNameFmtToken=${スマート名}
 indexFmtToken=${インデックス}
 prefixFmtToken=${プレフィックス}
 suffixFmtToken=${サフィックス}
 dateCustomFmtToken=${カスタム日付}
 dateFmtToken=${日付}
+
 Received=受け取りました
-noFolderSelected=メッセージフォルダが選択されていません：\n\n有効なアカウントまたはローカルフォルダサブフォルダを作成または選択してください。
+noFolderSelected=メッセージフォルダーが選択されていません：\n\n有効なアカウントまたはローカルフォルダー・サブフォルダーを作成または選択してください。
