--- a/src/chrome/locale/ja/mboximport/autobackup.properties
+++ b/src/chrome/locale/ja/mboximport/autobackup.properties
@@ -1,3 +1,3 @@
 fpTitle=バックアップ用保存フォルダの設定
-noBackup=バックアップを実行できません：コピー先のフォルダの場所とアクセス権限を確認してください
-noDelete=バックアップを実行しましたが、古いバックアップフォルダの削除ができませんでした。\nファイルとフォルダのアクセス権限を確認してください。
+noBackup=バックアップを実行できません：コピー先のフォルダーの場所とアクセス権限を確認してください
+noDelete=バックアップを実行しましたが古いバックアップフォルダーの削除ができませんでした。\nファイルとフォルダーのアクセス権限を確認してください。
