--- a/src/chrome/locale/ja/mboximport/profilewizard.properties
+++ b/src/chrome/locale/ja/mboximport/profilewizard.properties
@@ -1,3 +1,3 @@
 profilePath=インポートされたプロファイルの場所:
-noProfile=このフォルダには、正常なプロファイルがありません。
+noProfile=このフォルダーには正常なプロファイルがありません。
 pickProfile=インポートするプロファイルの場所:
